<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/light_primary">

    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo" />

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc" />

    <EditText
        android:id="@+id/editTextTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipo" />

    <EditText
        android:id="@+id/editTextEnlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enlace" />

    <EditText
        android:id="@+id/editTextImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/img" />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:background="@color/primary_color"/>
</LinearLayout>
